--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "aos": "^2.3.4",
+    "axios": "^1.7.7",
     "i18n": "^0.15.1",
     "i18next": "^23.14.0",
     "react": "^18.3.1",
